--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-navy-900 {
+    background-color: #0a192f;
+  }
+  .text-navy-900 {
+    color: #0a192f;
+  }
