--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,3 +8,27 @@
   .text-navy-900 {
     color: #0a192f;
   }
+
+  .bg-navy-600 {
+    background-color: #1a237e;
+  }
+
+  .bg-navy-700 {
+    background-color: #151c63;
+  }
+
+  .bg-navy-800 {
+    background-color: #0d1147;
+  }
+
+  .bg-navy-900 {
+    background-color: #070b2e;
+  }
+
+  .hover\:bg-navy-700:hover {
+    background-color: #151c63;
+  }
+
+  .hover\:bg-navy-800:hover {
+    background-color: #0d1147;
+  }
